--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rollespilskema-Frontend",
+  "name": "rollespilskema-frontend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
+    "vue-i18n": "^9.6.5",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0"
   },
