--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.3.67",
+    "@vueuse/core": "^10.7.1",
     "core-js": "^3.33.3",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
