--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,18 @@
     "sourceMap": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "types": [
       "node",
       "vuetify"
     ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
   },
   "include": [
@@ -27,6 +32,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/i18n/**/*.json",
+    "src/i18n/**/*.ts",
     "vite.config.ts"
   ]
 }
