--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.18.1",
-    "sass": "^1.69.5",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.0.0",
     "typescript": "^5.3.2",
     "unplugin-fonts": "^1.1.1",
     "vite": "^4.5.0",
