--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.3.67",
     "@vueuse/core": "^10.7.1",
+    "axios": "^1.6.7",
     "core-js": "^3.33.3",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
