Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   inputs:
     SourceFolder: '$(Build.SourcesDirectory)'
     Contents: |
-      **/*
+      dist/**/*
       !.git/**/*
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
   condition: succeededOrFailed()
