--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,18 +20,45 @@ steps:
     npm run build
   displayName: 'npm install and build'
 
-- task: CopyFiles@2
-  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)/archive.zip'
+- task: ArchiveFiles@2
+  displayName: 'Archive Dist Folder'
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)'
-    Contents: |
-      dist/**/*
-      !.git/**/*
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/archive.zip'
-  condition: succeededOrFailed()
-
+    rootFolderOrFile: 'dist'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    replaceExistingArchive: false
+- task: ArchiveFiles@2
+  displayName: 'Archive node_modules Folder'
+  inputs:
+    rootFolderOrFile: 'node_modules'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    replaceExistingArchive: false
+- task: ArchiveFiles@2
+  displayName: 'Archive package.json File'
+  inputs:
+    rootFolderOrFile: 'package.json'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    replaceExistingArchive: false
 - task: PublishBuildArtifacts@1
-  displayName: 'Copy files to: $(build.sourcesdirectory)/archive.zip'
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)/archive.zip'
-  condition: succeededOrFailed()
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+#- task: CopyFiles@2
+#  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)/archive.zip'
+#  inputs:
+#    SourceFolder: '$(Build.SourcesDirectory)'
+#    Contents: |
+#      dist/**/*
+#      !.git/**/*
+#    TargetFolder: '$(Build.ArtifactStagingDirectory)/archive.zip'
+#  condition: succeededOrFailed()
+
+#- task: PublishBuildArtifacts@1
+#  displayName: 'Copy files to: $(build.sourcesdirectory)/archive.zip'
+#  inputs:
+#    PathtoPublish: '$(build.artifactstagingdirectory)/archive.zip'
+#  condition: succeededOrFailed()
