--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,7 +1,7 @@
-# HTML
-# Archive your static HTML project and save it with the build record.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# Node.js with Vue
+# Build a Node.js project that uses Vue.
+# Add steps that analyze code, save build artifacts, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
 - main
@@ -10,18 +10,55 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: CopyFiles@2
-  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
+- task: NodeTool@0
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)'
-    Contents: |
-      dist/**/*
-      !.git/**/*
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
-  condition: succeededOrFailed()
+    versionSpec: '20.x'
+  displayName: 'Install Node.js'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Copy files to: $(build.sourcesdirectory)'
+- script: |
+    npm install
+    npm run build
+  displayName: 'npm install and build'
+
+- task: ArchiveFiles@2
+  displayName: 'Archive Dist Folder'
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
-  condition: succeededOrFailed()
+    rootFolderOrFile: 'dist'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    replaceExistingArchive: false
+- task: ArchiveFiles@2
+  displayName: 'Archive node_modules Folder'
+  inputs:
+    rootFolderOrFile: 'node_modules'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    replaceExistingArchive: false
+- task: ArchiveFiles@2
+  displayName: 'Archive package.json File'
+  inputs:
+    rootFolderOrFile: 'package.json'
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    replaceExistingArchive: false
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/archive.zip'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+#- task: CopyFiles@2
+#  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)/archive.zip'
+#  inputs:
+#    SourceFolder: '$(Build.SourcesDirectory)'
+#    Contents: |
+#      dist/**/*
+#      !.git/**/*
+#    TargetFolder: '$(Build.ArtifactStagingDirectory)/archive.zip'
+#  condition: succeededOrFailed()
+
+#- task: PublishBuildArtifacts@1
+#  displayName: 'Copy files to: $(build.sourcesdirectory)/archive.zip'
+#  inputs:
+#    PathtoPublish: '$(build.artifactstagingdirectory)/archive.zip'
+#  condition: succeededOrFailed()
