--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,6 +10,16 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: DownloadSecureFile@1
+  inputs:
+    secureFile: '.env'
+
+- task: CopyFiles@2
+  displayName: 'Copy .env file to source dir'
+  inputs:
+    SourceFolder: '$(mySecureFile.secureFilePath)'
+    TargetFolder: '$(Build.SourcesDirectory)'
+  condition: succeededOrFailed()
 - task: NodeTool@0
   inputs:
     versionSpec: '20.x'
