--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -19,15 +19,17 @@ steps:
     echo Installing $(secureEnvFile.secureFilePath) to the trusted CA directory...
     sudo ls -a $(secureEnvFile.secureFilePath)
     sudo less $(secureEnvFile.secureFilePath)
+
 - task: CopyFiles@2
   displayName: 'Copy .env file to source dir'
   inputs:
-    Contents: '$(secureEnvFile.secureFilePath)'
+    SourceFolder: '$(Agent.TempDirectory)'
+    Contents: '**'
     TargetFolder: '$(Build.SourcesDirectory)'
 
 - script: |
-    echo Checking $(secureEnvFile.secureFilePath) sourcefolder
-    sudo ls -a $(secureEnvFile.secureFilePath)
+    echo Checking $(Agent.TempDirectory) sourcefolder
+    sudo ls -a $(Agent.TempDirectory)
     echo Checking $(Build.SourcesDirectory) targetfolder
     sudo ls -a $(Build.SourcesDirectory)
     sudo less $(Build.SourcesDirectory)/.env
